# certbot-dns-opusdns

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  GET_STARTED.txt  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASING.md  SECURITY.md  docker-compose.yml  opusdns.ini.example  pyproject.toml  test.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  integration.yml  release.yml
certbot_dns_opusdns/: __init__.py  dns_opusdns.py  opusdns_client.py
credentials/: .gitkeep
tests/: test_dns_opusdns.py  test_integration.py  test_opusdns_client.py
